--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
-diesel_migrations = "1.4.0"
+diesel = { version = "1.4.3", features = ["postgres", "extras"] }
+diesel_migrations = { version = "1.4.0", features = ["postgres"] }
 dotenv = "0.15.0"
 juniper = "0.14.2"
 actix-web = "2.0"
@@ -16,3 +16,5 @@ actix-rt = "1.0"
 serde_json = "1.0.48"
 log = "0.4.8"
 env_logger = "0.7.1"
+diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
+juniper-eager-loading = "0.5.0"
