--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,12 @@ dotenv = "0.15.0"
 juniper = "0.14.2"
 actix-web = "2.0"
 actix-rt = "1.0"
+actix-identity = "0.2.1"
 serde_json = "1.0.48"
 log = "0.4.8"
 env_logger = "0.7.1"
 diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
 juniper-eager-loading = "0.5.0"
+ndarray = "0.13.0"
+ndarray-linalg = "0.12.0"
+uuid = { version = "0.8.1", features = ["v4"] }
