--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,11 @@ juniper-eager-loading = "0.5.0"
 ndarray = "0.13.0"
 ndarray-linalg = "0.12.0"
 uuid = { version = "0.8.1", features = ["v4"] }
+reqwest = "0.10.1"
+serde_urlencoded = "0.6.1"
+serde_derive = "1.0.104"
+serde = "1.0.104"
+listenfd = "0.3.3"
+# async-std = { version = "1.5.0", features = ["attributes"] }
+tokio = { version = "0.2.11", features = ["full"] }
+jsonwebtoken = "7.0.1"
