--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,6 @@
 version: '3'
 services:
   app:
-    # Uncomment the next line to use a non-root user for all processes. You can also
-    # simply use the "remoteUser" property in devcontainer.json if you just want VS Code
-    # and its sub-processes (terminals, tasks, debugging) to execute as the user. On Linux,
-    # you may need to update USER_UID and USER_GID in .devcontainer/Dockerfile to match your
-    # user if not 1000. See https://aka.ms/vscode-remote/containers/non-root for details.
-    # user: node
     build:
       context: .
       dockerfile: Dockerfile
@@ -33,17 +27,20 @@ services:
     environment:
       ROCKET_ENV: development
       DATABASE_URL: "postgres://user:password@db/wine_db"
+      REDIS_URL: "redis://user:password@redis/wine_cache"
     links:
       - db
+      - redis
     depends_on:
       - db
+      - redis
 
   db:
-    image: postgres:12
+    image: postgres
     container_name: wine_postgres
     restart: unless-stopped
     ports:
-      - "5432:5432"
+      - 5432:5432
     volumes:
       - wine_dbdata:/var/lib/postgresql/data
     environment:
@@ -51,5 +48,15 @@ services:
       POSTGRES_DB: wine_db
       POSTGRES_PASSWORD: password
       POSTGRES_HOST_AUTH_METHOD: trust
+
+  redis:
+    image: redis
+    container_name: wine_redis
+    restart: unless-stopped
+    ports:
+      - 6379:6379
+    volumes:
+      - wine_redisdata:/data
 volumes:
   wine_dbdata:
+  wine_redisdata:
